fix bug with responsive-ness on mobile devices

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -97,21 +97,25 @@ a {
   padding-left: 20px;
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 980px) {
   body {
-    margin-left: 10px;
-    margin-right: 10px;
+    margin-left: 10%;
+    margin-right: 10%;
   }
   h2 {
     font-size: 25px;
   }
   h1 {
-    font-size: 40px;
+    font-size: 75px;
   }
   p {
     font-size: 20px;
   }
   .left-side {
     width: 100%;
+  }
+
+  .home {
+    padding-top: 400px;
   }
 }
