--- a/static/css/styleprojects.css
+++ b/static/css/styleprojects.css
@@ -84,21 +84,25 @@ h1 {
   position: absolute;
 }
 
-.mouthpiece .project-images{
-    display: flex;
-    flex: 0 0 50%; /* Each image takes 50% of the available width */
+.mouthpiece .project-images {
+  display: flex;
+  flex: 0 0 50%;
 }
 
 .mouthpiece .project-image {
-    max-width: 100%; /* Limit the width of each image to 100% of its container */
-    margin-right: 50px; /* Add some spacing between the images */
-  }
+  max-width: 100%;
+  margin-right: 50px;
+}
 
-  .mouthpiece .project-contents {
-    flex: 1; /* Take the remaining available width */
-    max-width: 50%!important; /* Limit the maximum width of the project contents */
-    margin-left: -50px;
-  }
+.mouthpiece .project-contents {
+  flex: 1;
+  max-width: 50% !important;
+  margin-left: -50px;
+}
+
+#second-image {
+  margin-top: 10px;
+}
 
 .zillow {
   display: flex;
@@ -122,7 +126,6 @@ h1 {
   display: block;
   flex: 1;
 }
-
 
 .project-image {
   flex: 1;
@@ -217,112 +220,121 @@ a {
   transform: translateY(-5px);
 }
 
-@media only screen and (max-width: 768px) {
-    body {
-      margin-left: 10px;
-      margin-right: 10px;
-    }
-    h2 {
-      font-size: 40px!important
-    }
-
-    h1 {
-      font-size: 40px
-    }
-
-    p{
-        font-size: 12px;
-    }
-
-    li{
-        font-size: 10px;
-    }
-    .mouthpiece .project-images {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        width: 100%;
-        padding-bottom: 20px;
-      }
-    .mouthpiece .project-contents{
-        max-width: 75%!important;
-    }
-
-    .mouthpiece .project-contents p{
-        font-size: 18px;
-    }
-
-    .mouthpiece .project-images .project-image {
-        max-width: 100%!important;
-      }
-    .mouthpiece{
-        flex-direction: column;
-        align-items: center;
-    }
-    .circle-container {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        position: relative;
-        bottom: 40px;
-        left: 0;
-        right: 0;
-      }
-
-      .zillow{
-        flex-direction: column;
-        align-items: center;
-      }
-
-      .zillow .project-contents p{
-        font-size: 18px;
-    }
-
-    .zillow .project-contents{
-        max-width: 75%!important;
-        padding-bottom: 20px;
-    }
-
-    .ecommerce{
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .ecommerce .project-image{
-        padding-bottom: 20px;
-    }
-
-    .ecommerce .project-contents p{
-        font-size: 18px;
-    }
-
-    .ecommerce .project-contents{
-        max-width: 75%!important;
-    }
-
-    .sql{
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .sql .project-contents p{
-        font-size: 18px;
-    }
-
-    .sql .project-contents{
-        max-width: 75%!important;
-    }
-
-    
+@media only screen and (max-width: 980px) {
+  body {
+    margin-left: 10%;
+    margin-right: 10%;
   }
 
-  @media only screen and (max-width: 1366px) and (min-width: 768px) {
-    body {
-      margin-left: 10%;
-      margin-right: 10%;
-      padding-bottom: 50px;
-    }
-    p {
-      font-size: 2vw;
-    }
+  .home {
+    padding-top: 400px;
   }
+  h2 {
+    font-size: 40px !important;
+  }
+
+  h1 {
+    font-size: 40px;
+  }
+
+  p {
+    font-size: 12px;
+  }
+
+  li {
+    font-size: 18px;
+  }
+  .mouthpiece .project-images {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+    padding-bottom: 20px;
+  }
+  .mouthpiece .project-contents {
+    max-width: 75% !important;
+  }
+
+  .mouthpiece .project-images .project-image {
+    max-width: 100% !important;
+  }
+  .mouthpiece {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  #first-image {
+    margin-left: 100px;
+  }
+  #second-image {
+    margin-top: 0px;
+  }
+  .circle-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    bottom: 40px;
+    left: 0;
+    right: 0;
+  }
+
+  .zillow {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .zillow .project-contents p {
+    font-size: 18px;
+  }
+
+  .zillow .project-contents {
+    max-width: 75% !important;
+    padding-bottom: 20px;
+  }
+
+  .zillow .project-tech-list {
+    flex-wrap: nowrap;
+  }
+
+  .ecommerce {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .ecommerce .project-image {
+    padding-bottom: 20px;
+  }
+
+  .ecommerce .project-contents p {
+    font-size: 18px;
+  }
+
+  .ecommerce .project-contents {
+    max-width: 75% !important;
+  }
+
+  .sql {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .sql .project-contents p {
+    font-size: 18px;
+  }
+
+  .sql .project-contents {
+    max-width: 75% !important;
+  }
+}
+
+@media only screen and (max-width: 1366px) and (min-width: 980px) {
+  body {
+    margin-left: 10%;
+    margin-right: 10%;
+    padding-bottom: 50px;
+  }
+  p {
+    font-size: 2vw;
+  }
+}
